--- a/docs/main.css
+++ b/docs/main.css
@@ -11,9 +11,27 @@ html,body{
     left:0;
     outline: none;
 }
+#blocker {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 
-@media only screen and (max-width: 600px) {
-    
-  }
+#instructions {
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
 
 /*# sourceMappingURL=main.css.map*/
